Add rag dataset generator and evaluator

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,6 @@ LANGCHAIN_TRACING_V2=true
 LANGCHAIN_API_KEY=your_langchain_api_key_here
 LANGCHAIN_PROJECT="your_langchain_project_name_here"
 LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+LANGFUSE_SECRET_KEY="sk-lf-..."
+LANGFUSE_PUBLIC_KEY="pk-lf-..."
+LANGFUSE_HOST="https://us.cloud.langfuse.com"
