--- a/requirements.txt
+++ b/requirements.txt
@@ -40,9 +40,14 @@ ipython==8.27.0
 jedi==0.19.1
 jiter==0.5.0
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
-langsmith==0.1.121
+langchain==0.3.0
+langchain-core==0.3.5
+langchain-text-splitters==0.3.0
+langsmith==0.1.125
 Lazify==0.4.0
 literalai==0.0.607
 llama-cloud==0.0.17
