--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,25 @@
+# RUNPOD
 RUNPOD_API_KEY=your_runpod_api_key_here
+
+# OPENAI
 OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_ENDPOINT=https://api.openai.com/v1
+
+# MISTRAL
 MISTRAL_7B_INSTRUCT_ENDPOINT=your_mistral_7b_instruct_endpoint_here
 MISTRAL_7B_ENDPOINT=your_mistral_7b_endpoint_here
-OPENAI_ENDPOINT=https://api.openai.com/v1
+
+# LANGCHAIN
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_API_KEY=your_langchain_api_key_here
 LANGCHAIN_PROJECT="your_langchain_project_name_here"
 LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+
+# LANGFUSE
 LANGFUSE_SECRET_KEY="sk-lf-..."
 LANGFUSE_PUBLIC_KEY="pk-lf-..."
 LANGFUSE_HOST="https://us.cloud.langfuse.com"
+
+# IDEOGRAM
+IDEOGRAM_ENDPOINT=https://api.ideogram.ai
+IDEOGRAM_API_KEY=your_ideogram_api_key_here
