--- a/requirements.txt
+++ b/requirements.txt
@@ -19,11 +19,13 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
 idna==3.10
+img2pdf==0.5.1
 importlib_metadata==8.4.0
 jiter==0.5.0
 langsmith==0.1.121
 Lazify==0.4.0
 literalai==0.0.607
+lxml==5.3.0
 marshmallow==3.22.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
@@ -40,6 +42,8 @@ opentelemetry-sdk==1.27.0
 opentelemetry-semantic-conventions==0.48b0
 orjson==3.10.7
 packaging==23.2
+pikepdf==9.3.0
+pillow==10.4.0
 protobuf==4.25.4
 pydantic==2.9.2
 pydantic_core==2.23.4
