--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==23.2.1
 annotated-types==0.7.0
 anyio==4.4.0
+asgiref==3.8.1
 asyncer==0.0.7
 bidict==0.23.1
 certifi==2024.8.30
@@ -11,6 +12,7 @@ click==8.1.7
 dataclasses-json==0.6.7
 Deprecated==1.2.14
 distro==1.9.0
+Django==5.1.1
 fastapi==0.112.4
 filetype==1.2.0
 googleapis-common-protos==1.65.0
@@ -19,6 +21,7 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
 idna==3.10
+image==1.5.33
 img2pdf==0.5.1
 importlib_metadata==8.4.0
 jiter==0.5.0
@@ -55,7 +58,9 @@ python-socketio==5.11.4
 requests==2.32.3
 setuptools==75.1.0
 simple-websocket==1.0.0
+six==1.16.0
 sniffio==1.3.1
+sqlparse==0.5.1
 starlette==0.37.2
 syncer==2.0.3
 tomli==2.0.1
